Changed css path

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
     <head> 
         <title> Ari Korin </title>
-        <link rel="stylesheet" type="text/css" href="./style/index.css" />
+        <link rel="stylesheet" type="text/css" href="./Style/index.css" />
         
         <script language="javascript" type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/p5.js/0.4.23/p5.js"> </script>
         
